fix: 16px to 5px, and 4px gap no modify

--- a/src/components/AnnualCalendar/index.css
+++ b/src/components/AnnualCalendar/index.css
@@ -69,6 +69,7 @@
   z-index: 10;
   transition: opacity 0.2s, transform 0.2s;
   cursor: pointer;
+  align-self: center;
 }
 
 /* Um pequeno efeito visual quando o mouse passa por cima da linha */
